tests/baselines/reference/moduleAsBaseType.errors.txt
==== tests/cases/compiler/moduleAsBaseType.ts (6 errors) ====
    module M {}
    class C extends M {}
                    ~
!!! error TS2073: A class may only extend another class.
                    ~
!!! error TS4022: Type reference cannot refer to container 'M'.
    interface I extends M { }
                        ~
!!! error TS2075: An interface may only extend another class or interface.
                        ~
!!! error TS4022: Type reference cannot refer to container 'M'.
    class C2 implements M { }
                        ~
!!! error TS2074: A class may only implement another class or interface.
                        ~
!!! error TS4022: Type reference cannot refer to container 'M'.